gitops/streaks-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streaks-api-deployment
  labels:
    app: streaks-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streaks-api
  template:
    metadata:
      labels:
        app: streaks-api
    spec:
      containers:
      - name: streaks-api
        image: ghcr.io/konstfish/streaks-api:latest
        ports:
        - containerPort: 4000
        volumeMounts:
        - name: streaks-data
          mountPath: /opt/data
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 250m
            memory: 128Mi
      volumes:
      - name: streaks-data
        persistentVolumeClaim:
          claimName: streaks-data-pvc
