gitops/streaks-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streaks-api-service
spec:
  selector:
    app: streaks-api
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
